--- a/langyage_guesser/package.json
+++ b/langyage_guesser/package.json
@@ -2,8 +2,7 @@
   "name": "langyage_guesser",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "commonjs",
-
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
